Gettin' spans' captions into their respective p's

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="row mx-auto p-0">
                         <div class="col mt-3">
                             <p class="fw-bold">204 likes</p>
-                            <span class="fw-bold">My1stUsername </span><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolor suscipit similique. Eveniet earum, ex culpa fugiat praesentium mollitia dignissimos, unde modi, id vero deleniti? Accusamus quis eius soluta recusandae.</span>
+                            <p><span class="fw-bold">My1stUsername </span><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolor suscipit similique. Eveniet earum, ex culpa fugiat praesentium mollitia dignissimos, unde modi, id vero deleniti? Accusamus quis eius soluta recusandae.</span></p>
                         </div>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                     <div class="row mx-auto p-0">
                         <div class="col mt-3">
                             <p class="fw-bold">328 likes</p>
-                            <span class="fw-bold">My2ndUsername </span><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolor suscipit similique. Eveniet earum, ex culpa fugiat praesentium mollitia dignissimos, unde modi, id vero deleniti? Accusamus quis eius soluta recusandae.</span>
+                            <p><span class="fw-bold">My2ndUsername </span><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolor suscipit similique. Eveniet earum, ex culpa fugiat praesentium mollitia dignissimos, unde modi, id vero deleniti? Accusamus quis eius soluta recusandae.</span></p>
                         </div>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                     <div class="row mx-auto p-0">
                         <div class="col mt-3">
                             <p class="fw-bold">387 likes</p>
-                            <span class="fw-bold">My3rdUsername </span><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolor suscipit similique. Eveniet earum, ex culpa fugiat praesentium mollitia dignissimos, unde modi, id vero deleniti? Accusamus quis eius soluta recusandae.</span>
+                            <p><span class="fw-bold">My3rdUsername </span><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolor suscipit similique. Eveniet earum, ex culpa fugiat praesentium mollitia dignissimos, unde modi, id vero deleniti? Accusamus quis eius soluta recusandae.</span></p>
                         </div>
                     </div>
                 </div>
@@ -144,7 +144,7 @@
                     <div class="row mx-auto p-0">
                         <div class="col mt-3">
                             <p class="fw-bold">124 likes</p>
-                            <span class="fw-bold">My4thUsername </span><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolor suscipit similique. Eveniet earum, ex culpa fugiat praesentium mollitia dignissimos, unde modi, id vero deleniti? Accusamus quis eius soluta recusandae.</span>
+                            <p><span class="fw-bold">My4thUsername </span><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolor suscipit similique. Eveniet earum, ex culpa fugiat praesentium mollitia dignissimos, unde modi, id vero deleniti? Accusamus quis eius soluta recusandae.</span></p>
                         </div>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
                     <div class="row mx-auto p-0">
                         <div class="col mt-3">
                             <p class="fw-bold">249 likes</p>
-                            <span class="fw-bold">My5thUsername </span><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolor suscipit similique. Eveniet earum, ex culpa fugiat praesentium mollitia dignissimos, unde modi, id vero deleniti? Accusamus quis eius soluta recusandae.</span>
+                            <p><span class="fw-bold">My5thUsername </span><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolor suscipit similique. Eveniet earum, ex culpa fugiat praesentium mollitia dignissimos, unde modi, id vero deleniti? Accusamus quis eius soluta recusandae.</span></p>
                         </div>
                     </div>
                 </div>
@@ -192,7 +192,7 @@
                     <div class="row mx-auto p-0">
                         <div class="col mt-3">
                             <p class="fw-bold">972 likes</p>
-                            <span class="fw-bold">My6thUsername </span><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolor suscipit similique. Eveniet earum, ex culpa fugiat praesentium mollitia dignissimos, unde modi, id vero deleniti? Accusamus quis eius soluta recusandae.</span>
+                            <p><span class="fw-bold">My6thUsername </span><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolor suscipit similique. Eveniet earum, ex culpa fugiat praesentium mollitia dignissimos, unde modi, id vero deleniti? Accusamus quis eius soluta recusandae.</span></p>
                         </div>
                     </div>
                 </div>
@@ -216,7 +216,7 @@
                     <div class="row mx-auto p-0">
                         <div class="col mt-3">
                             <p class="fw-bold">245 likes</p>
-                            <span class="fw-bold">My7thUsername </span><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolor suscipit similique. Eveniet earum, ex culpa fugiat praesentium mollitia dignissimos, unde modi, id vero deleniti? Accusamus quis eius soluta recusandae.</span>
+                            <p><span class="fw-bold">My7thUsername </span><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolor suscipit similique. Eveniet earum, ex culpa fugiat praesentium mollitia dignissimos, unde modi, id vero deleniti? Accusamus quis eius soluta recusandae.</span></p>
                         </div>
                     </div>
                 </div>
@@ -240,7 +240,7 @@
                     <div class="row mx-auto p-0">
                         <div class="col mt-3">
                             <p class="fw-bold">343 likes</p>
-                            <span class="fw-bold">My7thUsername </span><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolor suscipit similique. Eveniet earum, ex culpa fugiat praesentium mollitia dignissimos, unde modi, id vero deleniti? Accusamus quis eius soluta recusandae.</span>
+                            <p><span class="fw-bold">My7thUsername </span><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolor suscipit similique. Eveniet earum, ex culpa fugiat praesentium mollitia dignissimos, unde modi, id vero deleniti? Accusamus quis eius soluta recusandae.</span></p>
                         </div>
                     </div>
                 </div>
